tests/snapshots/run_wpt_conformance__coreml_tile_int32_4D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "tile.https.any.js",
    "tile int32 4D tensor",
    "coreml",
    "PASS",
)
