tests/snapshots/run_wpt_conformance__coreml_tile_uint32_2D_tensor.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
tile.https.any.js tile uint32 2D tensor, coreml
 Failed to build graph: coreml runtime failed: MLModel compile failed: Failed to parse the model specification. Error: Unable to parse ML Program: in operation of type cast: Output '0' has incorrect type for operator 'ios17.cast'. Expected { [...]>, [...]>, [...]>, [...]>, [...]>, [...]>, [...]>, [...]>, tensor<bool, tensor<fp16, tensor<fp32, tensor<int16, tensor<int32, tensor<int8, tensor<uint16, tensor<uint8 }; got tensor<uint32, [2, 2]>.

--- built graph ---
webnn_graph "graph" v2 {
  inputs {
    tileInput: u32[2, 2];
  }

  nodes {
    [tileOutput] = tile(tileInput, label="");
  }

  outputs { tileOutput; }
}
