tests/snapshots/run_wpt_conformance__coreml_transpose_float16_1D_constant_tensor_default_options.snap
---
source: tests/run_wpt_conformance.rs
expression: "format!(\"{file_name} {test_name}, {backend_prefix}\\n {msg}\")"
---
transpose.https.any.js transpose float16 1D constant tensor default options, coreml
 Failed to build graph: coreml runtime failed: MLModel load failed: Failed to build the model execution plan using a model architecture file '<coreml-temp-model>' with error code: -14.

--- built graph ---
webnn_graph "graph" v2 {
  consts {
    operand_0: f16[24] @bytes([182, 209, 175, 82, 132, 211, 195, 80, 234, 84, 84, 212, 96, 63, 205, 85, 3, 83, 209, 84, 47, 83, 76, 213, 204, 81, 78, 213, 23, 83, 108, 206, 159, 69, 106, 206, 55, 86, 121, 213, 22, 212, 32, 212, 207, 80, 102, 64]);
  }

  nodes {
    [transposeOutput] = transpose(operand_0, label="", permutation=[]);
  }

  outputs { transposeOutput; }
}
